@@ -110,9 +110,15 @@ DisConnectInfoResponce::DisConnectInfoResponce(const base_class& request) : base
 
 ExecuteInfoRequest::ExecuteInfoRequest(initiator_type sender,
                                        const std::string& text,
+                                       size_t repeat,
+                                       common::time64_t msec_repeat_interval,
                                        bool silence,
                                        error_type er)
-    : base_class(sender, er), text(text), silence(silence) {}
+    : base_class(sender, er),
+      text(text),
+      repeat(repeat),
+      msec_repeat_interval(msec_repeat_interval),
+      silence(silence) {}
 
 ExecuteInfoResponce::ExecuteInfoResponce(const base_class& request) : base_class(request) {}
 
