@@ -1,6 +1,7 @@
 0.7.4 / 
 [Alexandr Topilski]
 - Rename command
+- Advanced options for execute command
 
 0.7.3 / October 1, 2016
 [Alexandr Topilski]
